# interpreter

./: AST.py  README.md  char_reader.py  first.mc  grammar.ebnf  integration.py  interpreter.py  interpreter_errors.py  interpreter_types.py  keywords.py  lexer.py  main.py  my_parser.py  my_token.py  my_token_exceptions.py  operations.py  parser_exceptions.py  pretty_printer.py  printer.py  pyproject.toml  reader_filter.py  requirements.txt  scopes.py  test_lexer.py  test_printer.py  test_string_reader.py  token_type.py  utils.py  visitor.py
examples/: binary_tree.txt  nested_struct.txt
formating/: pretty_printer.py
interpreter/: interpreter.py  interpreter_errors.py  interpreter_types.py  printer.py  scopes.py  visitor.py
lexer/: char_reader.py  keywords.py  lexer.py  my_token.py  my_token_exceptions.py  utils.py
parser/: my_parser.py  parser_exceptions.py
test_utils/: integration.py
tests/: test_ast_eq.py
tests/interpreter/: test_assignment.py  test_built_in_variables.py  test_expr.py  test_func.py  test_get_symbol_value.py  test_if.py  test_struct.py  test_variant.py  test_while.py
tests/lexer/: test_common_mistakes.py  test_identifier.py  test_keywords_and_operators.py  test_number_literals.py  test_small_programs.py  test_str_literal.py
tests/parser/: test_correct_expr.py  test_correct_rest.py  test_examples.py  test_expression.py  test_func.py  test_func_parser.py  test_parser.py  test_parser_common_mistakes.py  test_position.py  token_provider.py
tests/printer/: test_pretty_printer.py  test_printer.py
tests/reader/: test_string_reader.py
