[project]
name = "sl-interpreter"
version = "0.1.0"
description = "Interpreter of my own programming language. Static and weak typing, everything is passed as a value. "
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "multipledispatch>=1.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]
